objects/Field_History__c.object
<CustomObject>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Field Histories</relationshipLabel>
        <relationshipName>Field_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Field Histories</relationshipLabel>
        <relationshipName>Field_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <description>Provides a Date AND Time of the Field History created date</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Change_Time__c</fullName>
        <label>Next Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record__c</fullName>
        <label>Parent Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Field_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Auction__c</columns>
        <columns>Case__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Parent_Record__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FH-{0000}</displayFormat>
        <label>Field History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>